package common.dto_model;

public abstract class DTO {
}
